{{$NEXT}}

- Implemented $tree->freeze_tree and
  MaxMind::DB::Writer::Tree->new_from_frozen_tree methods. This provides a way
  of passing the tree between different processes.


0.060000 2014-11-11

- The map_key_type_callback argument for the MaxMind::DB::Writer::Tree class
  is now required. In some use cases it's not really used but in the most
  common use case leaving it out simply leads to confusing errors when
  attempting to write the tree to disk. GH #10.


0.050007 2014-10-20

- The writer now iterates over the search tree in depth-first order when the
  MaxMind::DB::Writer::Tree->iterate method is called. This means that
  networks are seen in IP address order.


0.050006 2014-07-28

- The writer now throw an error when writing out the database if it would try
  to write a record value in the search tree that is larger than the search
  tree can handle. For example, if your record size is 24 bits, you cannot
  write a value larger than (2^24)-1. Fixed by Greg Oschwald.

- The Build.PL file shipped with this distro now dies if you try to run it on
  Windows, since this module simply doesn't work on Windows.


0.050005 2014-07-03

- The merge-on-collision feature was fairly broken. Fixed by Greg Oschwald.


0.050004 2014-05-27

- First public release