@@ -4,6 +4,9 @@
   MaxMind::DB::Writer::Tree->new_from_frozen_tree methods. This provides a way
   of passing the tree between different processes.
 
+- Made the attribute reader methods for all values passed to the constructor
+  public.
+
 
 0.060000 2014-11-11
 
